parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> <empty>
Rule 3     instructions_opt -> instructions
Rule 4     instructions -> instruction
Rule 5     instructions -> instructions instruction
Rule 6     instruction -> FOR var = range instruction
Rule 7     instruction -> WHILE ( condition ) instruction
Rule 8     instruction -> IF ( condition ) instruction ELSE instruction  [precedence=nonassoc, level=2]
Rule 9     instruction -> IF ( condition ) instruction  [precedence=nonassoc, level=1]
Rule 10    instruction -> { instructions }
Rule 11    instruction -> statement ;
Rule 12    instruction -> assignment ;
Rule 13    range -> expression : expression
Rule 14    condition -> expression < expression  [precedence=nonassoc, level=3]
Rule 15    condition -> expression > expression  [precedence=nonassoc, level=3]
Rule 16    condition -> expression GE expression  [precedence=nonassoc, level=3]
Rule 17    condition -> expression LE expression  [precedence=nonassoc, level=3]
Rule 18    condition -> expression NE expression  [precedence=nonassoc, level=3]
Rule 19    condition -> expression EQ expression  [precedence=nonassoc, level=3]
Rule 20    assignment_op -> =
Rule 21    assignment_op -> ADDASSIGN
Rule 22    assignment_op -> SUBASSIGN
Rule 23    assignment_op -> DIVASSIGN
Rule 24    assignment_op -> MULASSIGN
Rule 25    assignment -> vector_element assignment_op expression
Rule 26    assignment -> matrix_element assignment_op expression
Rule 27    assignment -> var assignment_op expression
Rule 28    matrix_function -> matrix_function_name ( expression , expression )
Rule 29    matrix_function -> matrix_function_name ( expression )
Rule 30    matrix_function_name -> ZEROS
Rule 31    matrix_function_name -> ONES
Rule 32    matrix_function_name -> EYE
Rule 33    matrix -> [ rows ]
Rule 34    rows -> row
Rule 35    rows -> rows ; row
Rule 36    row -> variables
Rule 37    variables -> variable
Rule 38    variables -> variables , variable
Rule 39    variable -> element
Rule 40    variable -> var
Rule 41    variable -> number
Rule 42    uminus -> - expression  [precedence=right, level=6]
Rule 43    element -> vector_element
Rule 44    element -> matrix_element
Rule 45    vector_element -> ID [ expression ]
Rule 46    matrix_element -> ID [ expression , expression ]
Rule 47    var -> ID
Rule 48    number -> INTNUM
Rule 49    number -> FLOATNUM
Rule 50    string -> STRING
Rule 51    statement -> PRINT print_vals
Rule 52    statement -> RETURN expression
Rule 53    statement -> BREAK
Rule 54    statement -> CONTINUE
Rule 55    print_vals -> print_val
Rule 56    print_vals -> print_vals , print_val
Rule 57    print_val -> expression
Rule 58    print_val -> string
Rule 59    expression -> uminus
Rule 60    expression -> vector_element
Rule 61    expression -> matrix_element
Rule 62    expression -> transposition
Rule 63    expression -> matrix_function
Rule 64    expression -> matrix
Rule 65    expression -> num_expression
Rule 66    expression -> ( expression )
Rule 67    expression -> expression DOTDIV expression  [precedence=left, level=5]
Rule 68    expression -> expression DOTMUL expression  [precedence=left, level=5]
Rule 69    expression -> expression DOTSUB expression  [precedence=left, level=4]
Rule 70    expression -> expression DOTADD expression  [precedence=left, level=4]
Rule 71    expression -> expression / expression  [precedence=left, level=5]
Rule 72    expression -> expression * expression  [precedence=left, level=5]
Rule 73    expression -> expression - expression  [precedence=left, level=4]
Rule 74    expression -> expression + expression  [precedence=left, level=4]
Rule 75    num_expression -> var
Rule 76    num_expression -> number
Rule 77    transposition -> expression '  [precedence=left, level=7]

Terminals, with rules where they appear:

'                    : 77
(                    : 7 8 9 28 29 66
)                    : 7 8 9 28 29 66
*                    : 72
+                    : 74
,                    : 28 38 46 56
-                    : 42 73
/                    : 71
:                    : 13
;                    : 11 12 35
<                    : 14
=                    : 6 20
>                    : 15
ADDASSIGN            : 21
BREAK                : 53
CONTINUE             : 54
DIVASSIGN            : 23
DOTADD               : 70
DOTDIV               : 67
DOTMUL               : 68
DOTSUB               : 69
ELSE                 : 8
EQ                   : 19
EYE                  : 32
FLOATNUM             : 49
FOR                  : 6
GE                   : 16
ID                   : 45 46 47
IF                   : 8 9
INTNUM               : 48
LE                   : 17
MULASSIGN            : 24
NE                   : 18
ONES                 : 31
PRINT                : 51
RETURN               : 52
STRING               : 50
SUBASSIGN            : 22
WHILE                : 7
ZEROS                : 30
[                    : 33 45 46
]                    : 33 45 46
error                : 
{                    : 10
}                    : 10

Nonterminals, with rules where they appear:

assignment           : 12
assignment_op        : 25 26 27
condition            : 7 8 9
element              : 39
expression           : 13 13 14 14 15 15 16 16 17 17 18 18 19 19 25 26 27 28 28 29 42 45 46 46 52 57 66 67 67 68 68 69 69 70 70 71 71 72 72 73 73 74 74 77
instruction          : 4 5 6 7 8 8 9
instructions         : 3 5 10
instructions_opt     : 1
matrix               : 64
matrix_element       : 26 44 61
matrix_function      : 63
matrix_function_name : 28 29
num_expression       : 65
number               : 41 76
print_val            : 55 56
print_vals           : 51 56
program              : 0
range                : 6
row                  : 34 35
rows                 : 33 35
statement            : 11
string               : 58
transposition        : 62
uminus               : 59
var                  : 6 27 40 75
variable             : 37 38
variables            : 36 38
vector_element       : 25 43 60


state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> .
    (3) instructions_opt -> . instructions
    (4) instructions -> . instruction
    (5) instructions -> . instructions instruction
    (6) instruction -> . FOR var = range instruction
    (7) instruction -> . WHILE ( condition ) instruction
    (8) instruction -> . IF ( condition ) instruction ELSE instruction
    (9) instruction -> . IF ( condition ) instruction
    (10) instruction -> . { instructions }
    (11) instruction -> . statement ;
    (12) instruction -> . assignment ;
    (51) statement -> . PRINT print_vals
    (52) statement -> . RETURN expression
    (53) statement -> . BREAK
    (54) statement -> . CONTINUE
    (25) assignment -> . vector_element assignment_op expression
    (26) assignment -> . matrix_element assignment_op expression
    (27) assignment -> . var assignment_op expression
    (45) vector_element -> . ID [ expression ]
    (46) matrix_element -> . ID [ expression , expression ]
    (47) var -> . ID
    $end            reduce using rule 2 (instructions_opt -> .)
    FOR             shift and go to state 5
    WHILE           shift and go to state 7
    IF              shift and go to state 8
    {               shift and go to state 9
    PRINT           shift and go to state 12
    RETURN          shift and go to state 13
    BREAK           shift and go to state 14
    CONTINUE        shift and go to state 15
    ID              shift and go to state 18

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    instruction                    shift and go to state 4
    var                            shift and go to state 6
    statement                      shift and go to state 10
    assignment                     shift and go to state 11
    vector_element                 shift and go to state 16
    matrix_element                 shift and go to state 17

state 1

    (0) S' -> program .


state 2

    (1) program -> instructions_opt .
    $end            reduce using rule 1 (program -> instructions_opt .)


state 3

    (3) instructions_opt -> instructions .
    (5) instructions -> instructions . instruction
    (6) instruction -> . FOR var = range instruction
    (7) instruction -> . WHILE ( condition ) instruction
    (8) instruction -> . IF ( condition ) instruction ELSE instruction
    (9) instruction -> . IF ( condition ) instruction
    (10) instruction -> . { instructions }
    (11) instruction -> . statement ;
    (12) instruction -> . assignment ;
    (51) statement -> . PRINT print_vals
    (52) statement -> . RETURN expression
    (53) statement -> . BREAK
    (54) statement -> . CONTINUE
    (25) assignment -> . vector_element assignment_op expression
    (26) assignment -> . matrix_element assignment_op expression
    (27) assignment -> . var assignment_op expression
    (45) vector_element -> . ID [ expression ]
    (46) matrix_element -> . ID [ expression , expression ]
    (47) var -> . ID
    $end            reduce using rule 3 (instructions_opt -> instructions .)
    FOR             shift and go to state 5
    WHILE           shift and go to state 7
    IF              shift and go to state 8
    {               shift and go to state 9
    PRINT           shift and go to state 12
    RETURN          shift and go to state 13
    BREAK           shift and go to state 14
    CONTINUE        shift and go to state 15
    ID              shift and go to state 18

    instruction                    shift and go to state 19
    var                            shift and go to state 6
    statement                      shift and go to state 10
    assignment                     shift and go to state 11
    vector_element                 shift and go to state 16
    matrix_element                 shift and go to state 17

state 4

    (4) instructions -> instruction .
    FOR             reduce using rule 4 (instructions -> instruction .)
    WHILE           reduce using rule 4 (instructions -> instruction .)
    IF              reduce using rule 4 (instructions -> instruction .)
    {               reduce using rule 4 (instructions -> instruction .)
    PRINT           reduce using rule 4 (instructions -> instruction .)
    RETURN          reduce using rule 4 (instructions -> instruction .)
    BREAK           reduce using rule 4 (instructions -> instruction .)
    CONTINUE        reduce using rule 4 (instructions -> instruction .)
    ID              reduce using rule 4 (instructions -> instruction .)
    $end            reduce using rule 4 (instructions -> instruction .)
    }               reduce using rule 4 (instructions -> instruction .)


state 5

    (6) instruction -> FOR . var = range instruction
    (47) var -> . ID
    ID              shift and go to state 21

    var                            shift and go to state 20

state 6

    (27) assignment -> var . assignment_op expression
    (20) assignment_op -> . =
    (21) assignment_op -> . ADDASSIGN
    (22) assignment_op -> . SUBASSIGN
    (23) assignment_op -> . DIVASSIGN
    (24) assignment_op -> . MULASSIGN
    =               shift and go to state 23
    ADDASSIGN       shift and go to state 24
    SUBASSIGN       shift and go to state 25
    DIVASSIGN       shift and go to state 26
    MULASSIGN       shift and go to state 27

    assignment_op                  shift and go to state 22

state 7

    (7) instruction -> WHILE . ( condition ) instruction
    (               shift and go to state 28


state 8

    (8) instruction -> IF . ( condition ) instruction ELSE instruction
    (9) instruction -> IF . ( condition ) instruction
    (               shift and go to state 29


state 9

    (10) instruction -> { . instructions }
    (4) instructions -> . instruction
    (5) instructions -> . instructions instruction
    (6) instruction -> . FOR var = range instruction
    (7) instruction -> . WHILE ( condition ) instruction
    (8) instruction -> . IF ( condition ) instruction ELSE instruction
    (9) instruction -> . IF ( condition ) instruction
    (10) instruction -> . { instructions }
    (11) instruction -> . statement ;
    (12) instruction -> . assignment ;
    (51) statement -> . PRINT print_vals
    (52) statement -> . RETURN expression
    (53) statement -> . BREAK
    (54) statement -> . CONTINUE
    (25) assignment -> . vector_element assignment_op expression
    (26) assignment -> . matrix_element assignment_op expression
    (27) assignment -> . var assignment_op expression
    (45) vector_element -> . ID [ expression ]
    (46) matrix_element -> . ID [ expression , expression ]
    (47) var -> . ID
    FOR             shift and go to state 5
    WHILE           shift and go to state 7
    IF              shift and go to state 8
    {               shift and go to state 9
    PRINT           shift and go to state 12
    RETURN          shift and go to state 13
    BREAK           shift and go to state 14
    CONTINUE        shift and go to state 15
    ID              shift and go to state 18

    instructions                   shift and go to state 30
    instruction                    shift and go to state 4
    var                            shift and go to state 6
    statement                      shift and go to state 10
    assignment                     shift and go to state 11
    vector_element                 shift and go to state 16
    matrix_element                 shift and go to state 17

state 10

    (11) instruction -> statement . ;
    ;               shift and go to state 31


state 11

    (12) instruction -> assignment . ;
    ;               shift and go to state 32


state 12

    (51) statement -> PRINT . print_vals
    (55) print_vals -> . print_val
    (56) print_vals -> . print_vals , print_val
    (57) print_val -> . expression
    (58) print_val -> . string
    (59) expression -> . uminus
    (60) expression -> . vector_element
    (61) expression -> . matrix_element
    (62) expression -> . transposition
    (63) expression -> . matrix_function
    (64) expression -> . matrix
    (65) expression -> . num_expression
    (66) expression -> . ( expression )
    (67) expression -> . expression DOTDIV expression
    (68) expression -> . expression DOTMUL expression
    (69) expression -> . expression DOTSUB expression
    (70) expression -> . expression DOTADD expression
    (71) expression -> . expression / expression
    (72) expression -> . expression * expression
    (73) expression -> . expression - expression
    (74) expression -> . expression + expression
    (50) string -> . STRING
    (42) uminus -> . - expression
    (45) vector_element -> . ID [ expression ]
    (46) matrix_element -> . ID [ expression , expression ]
    (77) transposition -> . expression '
    (28) matrix_function -> . matrix_function_name ( expression , expression )
    (29) matrix_function -> . matrix_function_name ( expression )
    (33) matrix -> . [ rows ]
    (75) num_expression -> . var
    (76) num_expression -> . number
    (30) matrix_function_name -> . ZEROS
    (31) matrix_function_name -> . ONES
    (32) matrix_function_name -> . EYE
    (47) var -> . ID
    (48) number -> . INTNUM
    (49) number -> . FLOATNUM
    (               shift and go to state 44
    STRING          shift and go to state 46
    -               shift and go to state 45
    ID              shift and go to state 18
    [               shift and go to state 47
    ZEROS           shift and go to state 51
    ONES            shift and go to state 52
    EYE             shift and go to state 53
    INTNUM          shift and go to state 54
    FLOATNUM        shift and go to state 55

    print_vals                     shift and go to state 33
    print_val                      shift and go to state 34
    expression                     shift and go to state 35
    string                         shift and go to state 36
    uminus                         shift and go to state 37
    vector_element                 shift and go to state 38
    matrix_element                 shift and go to state 39
    transposition                  shift and go to state 40
    matrix_function                shift and go to state 41
    matrix                         shift and go to state 42
    num_expression                 shift and go to state 43
    matrix_function_name           shift and go to state 48
    var                            shift and go to state 49
    number                         shift and go to state 50

state 13

    (52) statement -> RETURN . expression
    (59) expression -> . uminus
    (60) expression -> . vector_element
    (61) expression -> . matrix_element
    (62) expression -> . transposition
    (63) expression -> . matrix_function
    (64) expression -> . matrix
    (65) expression -> . num_expression
    (66) expression -> . ( expression )
    (67) expression -> . expression DOTDIV expression
    (68) expression -> . expression DOTMUL expression
    (69) expression -> . expression DOTSUB expression
    (70) expression -> . expression DOTADD expression
    (71) expression -> . expression / expression
    (72) expression -> . expression * expression
    (73) expression -> . expression - expression
    (74) expression -> . expression + expression
    (42) uminus -> . - expression
    (45) vector_element -> . ID [ expression ]
    (46) matrix_element -> . ID [ expression , expression ]
    (77) transposition -> . expression '
    (28) matrix_function -> . matrix_function_name ( expression , expression )
    (29) matrix_function -> . matrix_function_name ( expression )
    (33) matrix -> . [ rows ]
    (75) num_expression -> . var
    (76) num_expression -> . number
    (30) matrix_function_name -> . ZEROS
    (31) matrix_function_name -> . ONES
    (32) matrix_function_name -> . EYE
    (47) var -> . ID
    (48) number -> . INTNUM
    (49) number -> . FLOATNUM
    (               shift and go to state 44
    -               shift and go to state 45
    ID              shift and go to state 18
    [               shift and go to state 47
    ZEROS           shift and go to state 51
    ONES            shift and go to state 52
    EYE             shift and go to state 53
    INTNUM          shift and go to state 54
    FLOATNUM        shift and go to state 55

    expression                     shift and go to state 56
    uminus                         shift and go to state 37
    vector_element                 shift and go to state 38
    matrix_element                 shift and go to state 39
    transposition                  shift and go to state 40
    matrix_function                shift and go to state 41
    matrix                         shift and go to state 42
    num_expression                 shift and go to state 43
    matrix_function_name           shift and go to state 48
    var                            shift and go to state 49
    number                         shift and go to state 50

state 14

    (53) statement -> BREAK .
    ;               reduce using rule 53 (statement -> BREAK .)


state 15

    (54) statement -> CONTINUE .
    ;               reduce using rule 54 (statement -> CONTINUE .)


state 16

    (25) assignment -> vector_element . assignment_op expression
    (20) assignment_op -> . =
    (21) assignment_op -> . ADDASSIGN
    (22) assignment_op -> . SUBASSIGN
    (23) assignment_op -> . DIVASSIGN
    (24) assignment_op -> . MULASSIGN
    =               shift and go to state 23
    ADDASSIGN       shift and go to state 24
    SUBASSIGN       shift and go to state 25
    DIVASSIGN       shift and go to state 26
    MULASSIGN       shift and go to state 27

    assignment_op                  shift and go to state 57

state 17

    (26) assignment -> matrix_element . assignment_op expression
    (20) assignment_op -> . =
    (21) assignment_op -> . ADDASSIGN
    (22) assignment_op -> . SUBASSIGN
    (23) assignment_op -> . DIVASSIGN
    (24) assignment_op -> . MULASSIGN
    =               shift and go to state 23
    ADDASSIGN       shift and go to state 24
    SUBASSIGN       shift and go to state 25
    DIVASSIGN       shift and go to state 26
    MULASSIGN       shift and go to state 27

    assignment_op                  shift and go to state 58

state 18

    (45) vector_element -> ID . [ expression ]
    (46) matrix_element -> ID . [ expression , expression ]
    (47) var -> ID .
    [               shift and go to state 59
    =               reduce using rule 47 (var -> ID .)
    ADDASSIGN       reduce using rule 47 (var -> ID .)
    SUBASSIGN       reduce using rule 47 (var -> ID .)
    DIVASSIGN       reduce using rule 47 (var -> ID .)
    MULASSIGN       reduce using rule 47 (var -> ID .)
    DOTDIV          reduce using rule 47 (var -> ID .)
    DOTMUL          reduce using rule 47 (var -> ID .)
    DOTSUB          reduce using rule 47 (var -> ID .)
    DOTADD          reduce using rule 47 (var -> ID .)
    /               reduce using rule 47 (var -> ID .)
    *               reduce using rule 47 (var -> ID .)
    -               reduce using rule 47 (var -> ID .)
    +               reduce using rule 47 (var -> ID .)
    '               reduce using rule 47 (var -> ID .)
    ,               reduce using rule 47 (var -> ID .)
    ;               reduce using rule 47 (var -> ID .)
    <               reduce using rule 47 (var -> ID .)
    >               reduce using rule 47 (var -> ID .)
    GE              reduce using rule 47 (var -> ID .)
    LE              reduce using rule 47 (var -> ID .)
    NE              reduce using rule 47 (var -> ID .)
    EQ              reduce using rule 47 (var -> ID .)
    )               reduce using rule 47 (var -> ID .)
    ]               reduce using rule 47 (var -> ID .)
    :               reduce using rule 47 (var -> ID .)
    FOR             reduce using rule 47 (var -> ID .)
    WHILE           reduce using rule 47 (var -> ID .)
    IF              reduce using rule 47 (var -> ID .)
    {               reduce using rule 47 (var -> ID .)
    PRINT           reduce using rule 47 (var -> ID .)
    RETURN          reduce using rule 47 (var -> ID .)
    BREAK           reduce using rule 47 (var -> ID .)
    CONTINUE        reduce using rule 47 (var -> ID .)
    ID              reduce using rule 47 (var -> ID .)


state 19

    (5) instructions -> instructions instruction .
    FOR             reduce using rule 5 (instructions -> instructions instruction .)
    WHILE           reduce using rule 5 (instructions -> instructions instruction .)
    IF              reduce using rule 5 (instructions -> instructions instruction .)
    {               reduce using rule 5 (instructions -> instructions instruction .)
    PRINT           reduce using rule 5 (instructions -> instructions instruction .)
    RETURN          reduce using rule 5 (instructions -> instructions instruction .)
    BREAK           reduce using rule 5 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 5 (instructions -> instructions instruction .)
    ID              reduce using rule 5 (instructions -> instructions instruction .)
    $end            reduce using rule 5 (instructions -> instructions instruction .)
    }               reduce using rule 5 (instructions -> instructions instruction .)


state 20

    (6) instruction -> FOR var . = range instruction
    =               shift and go to state 60


state 21

    (47) var -> ID .
    =               reduce using rule 47 (var -> ID .)


state 22

    (27) assignment -> var assignment_op . expression
    (59) expression -> . uminus
    (60) expression -> . vector_element
    (61) expression -> . matrix_element
    (62) expression -> . transposition
    (63) expression -> . matrix_function
    (64) expression -> . matrix
    (65) expression -> . num_expression
    (66) expression -> . ( expression )
    (67) expression -> . expression DOTDIV expression
    (68) expression -> . expression DOTMUL expression
    (69) expression -> . expression DOTSUB expression
    (70) expression -> . expression DOTADD expression
    (71) expression -> . expression / expression
    (72) expression -> . expression * expression
    (73) expression -> . expression - expression
    (74) expression -> . expression + expression
    (42) uminus -> . - expression
    (45) vector_element -> . ID [ expression ]
    (46) matrix_element -> . ID [ expression , expression ]
    (77) transposition -> . expression '
    (28) matrix_function -> . matrix_function_name ( expression , expression )
    (29) matrix_function -> . matrix_function_name ( expression )
    (33) matrix -> . [ rows ]
    (75) num_expression -> . var
    (76) num_expression -> . number
    (30) matrix_function_name -> . ZEROS
    (31) matrix_function_name -> . ONES
    (32) matrix_function_name -> . EYE
    (47) var -> . ID
    (48) number -> . INTNUM
    (49) number -> . FLOATNUM
    (               shift and go to state 44
    -               shift and go to state 45
    ID              shift and go to state 18
    [               shift and go to state 47
    ZEROS           shift and go to state 51
    ONES            shift and go to state 52
    EYE             shift and go to state 53
    INTNUM          shift and go to state 54
    FLOATNUM        shift and go to state 55

    var                            shift and go to state 49
    expression                     shift and go to state 61
    uminus                         shift and go to state 37
    vector_element                 shift and go to state 38
    matrix_element                 shift and go to state 39
    transposition                  shift and go to state 40
    matrix_function                shift and go to state 41
    matrix                         shift and go to state 42
    num_expression                 shift and go to state 43
    matrix_function_name           shift and go to state 48
    number                         shift and go to state 50

state 23

    (20) assignment_op -> = .
    (               reduce using rule 20 (assignment_op -> = .)
    -               reduce using rule 20 (assignment_op -> = .)
    ID              reduce using rule 20 (assignment_op -> = .)
    [               reduce using rule 20 (assignment_op -> = .)
    ZEROS           reduce using rule 20 (assignment_op -> = .)
    ONES            reduce using rule 20 (assignment_op -> = .)
    EYE             reduce using rule 20 (assignment_op -> = .)
    INTNUM          reduce using rule 20 (assignment_op -> = .)
    FLOATNUM        reduce using rule 20 (assignment_op -> = .)


state 24

    (21) assignment_op -> ADDASSIGN .
    (               reduce using rule 21 (assignment_op -> ADDASSIGN .)
    -               reduce using rule 21 (assignment_op -> ADDASSIGN .)
    ID              reduce using rule 21 (assignment_op -> ADDASSIGN .)
    [               reduce using rule 21 (assignment_op -> ADDASSIGN .)
    ZEROS           reduce using rule 21 (assignment_op -> ADDASSIGN .)
    ONES            reduce using rule 21 (assignment_op -> ADDASSIGN .)
    EYE             reduce using rule 21 (assignment_op -> ADDASSIGN .)
    INTNUM          reduce using rule 21 (assignment_op -> ADDASSIGN .)
    FLOATNUM        reduce using rule 21 (assignment_op -> ADDASSIGN .)


state 25

    (22) assignment_op -> SUBASSIGN .
    (               reduce using rule 22 (assignment_op -> SUBASSIGN .)
    -               reduce using rule 22 (assignment_op -> SUBASSIGN .)
    ID              reduce using rule 22 (assignment_op -> SUBASSIGN .)
    [               reduce using rule 22 (assignment_op -> SUBASSIGN .)
    ZEROS           reduce using rule 22 (assignment_op -> SUBASSIGN .)
    ONES            reduce using rule 22 (assignment_op -> SUBASSIGN .)
    EYE             reduce using rule 22 (assignment_op -> SUBASSIGN .)
    INTNUM          reduce using rule 22 (assignment_op -> SUBASSIGN .)
    FLOATNUM        reduce using rule 22 (assignment_op -> SUBASSIGN .)


state 26

    (23) assignment_op -> DIVASSIGN .
    (               reduce using rule 23 (assignment_op -> DIVASSIGN .)
    -               reduce using rule 23 (assignment_op -> DIVASSIGN .)
    ID              reduce using rule 23 (assignment_op -> DIVASSIGN .)
    [               reduce using rule 23 (assignment_op -> DIVASSIGN .)
    ZEROS           reduce using rule 23 (assignment_op -> DIVASSIGN .)
    ONES            reduce using rule 23 (assignment_op -> DIVASSIGN .)
    EYE             reduce using rule 23 (assignment_op -> DIVASSIGN .)
    INTNUM          reduce using rule 23 (assignment_op -> DIVASSIGN .)
    FLOATNUM        reduce using rule 23 (assignment_op -> DIVASSIGN .)


state 27

    (24) assignment_op -> MULASSIGN .
    (               reduce using rule 24 (assignment_op -> MULASSIGN .)
    -               reduce using rule 24 (assignment_op -> MULASSIGN .)
    ID              reduce using rule 24 (assignment_op -> MULASSIGN .)
    [               reduce using rule 24 (assignment_op -> MULASSIGN .)
    ZEROS           reduce using rule 24 (assignment_op -> MULASSIGN .)
    ONES            reduce using rule 24 (assignment_op -> MULASSIGN .)
    EYE             reduce using rule 24 (assignment_op -> MULASSIGN .)
    INTNUM          reduce using rule 24 (assignment_op -> MULASSIGN .)
    FLOATNUM        reduce using rule 24 (assignment_op -> MULASSIGN .)


state 28

    (7) instruction -> WHILE ( . condition ) instruction
    (14) condition -> . expression < expression
    (15) condition -> . expression > expression
    (16) condition -> . expression GE expression
    (17) condition -> . expression LE expression
    (18) condition -> . expression NE expression
    (19) condition -> . expression EQ expression
    (59) expression -> . uminus
    (60) expression -> . vector_element
    (61) expression -> . matrix_element
    (62) expression -> . transposition
    (63) expression -> . matrix_function
    (64) expression -> . matrix
    (65) expression -> . num_expression
    (66) expression -> . ( expression )
    (67) expression -> . expression DOTDIV expression
    (68) expression -> . expression DOTMUL expression
    (69) expression -> . expression DOTSUB expression
    (70) expression -> . expression DOTADD expression
    (71) expression -> . expression / expression
    (72) expression -> . expression * expression
    (73) expression -> . expression - expression
    (74) expression -> . expression + expression
    (42) uminus -> . - expression
    (45) vector_element -> . ID [ expression ]
    (46) matrix_element -> . ID [ expression , expression ]
    (77) transposition -> . expression '
    (28) matrix_function -> . matrix_function_name ( expression , expression )
    (29) matrix_function -> . matrix_function_name ( expression )
    (33) matrix -> . [ rows ]
    (75) num_expression -> . var
    (76) num_expression -> . number
    (30) matrix_function_name -> . ZEROS
    (31) matrix_function_name -> . ONES
    (32) matrix_function_name -> . EYE
    (47) var -> . ID
    (48) number -> . INTNUM
    (49) number -> . FLOATNUM
    (               shift and go to state 44
    -               shift and go to state 45
    ID              shift and go to state 18
    [               shift and go to state 47
    ZEROS           shift and go to state 51
    ONES            shift and go to state 52
    EYE             shift and go to state 53
    INTNUM          shift and go to state 54
    FLOATNUM        shift and go to state 55

    condition                      shift and go to state 62
    expression                     shift and go to state 63
    uminus                         shift and go to state 37
    vector_element                 shift and go to state 38
    matrix_element                 shift and go to state 39
    transposition                  shift and go to state 40
    matrix_function                shift and go to state 41
    matrix                         shift and go to state 42
    num_expression                 shift and go to state 43
    matrix_function_name           shift and go to state 48
    var                            shift and go to state 49
    number                         shift and go to state 50

state 29

    (8) instruction -> IF ( . condition ) instruction ELSE instruction
    (9) instruction -> IF ( . condition ) instruction
    (14) condition -> . expression < expression
    (15) condition -> . expression > expression
    (16) condition -> . expression GE expression
    (17) condition -> . expression LE expression
    (18) condition -> . expression NE expression
    (19) condition -> . expression EQ expression
    (59) expression -> . uminus
    (60) expression -> . vector_element
    (61) expression -> . matrix_element
    (62) expression -> . transposition
    (63) expression -> . matrix_function
    (64) expression -> . matrix
    (65) expression -> . num_expression
    (66) expression -> . ( expression )
    (67) expression -> . expression DOTDIV expression
    (68) expression -> . expression DOTMUL expression
    (69) expression -> . expression DOTSUB expression
    (70) expression -> . expression DOTADD expression
    (71) expression -> . expression / expression
    (72) expression -> . expression * expression
    (73) expression -> . expression - expression
    (74) expression -> . expression + expression
    (42) uminus -> . - expression
    (45) vector_element -> . ID [ expression ]
    (46) matrix_element -> . ID [ expression , expression ]
    (77) transposition -> . expression '
    (28) matrix_function -> . matrix_function_name ( expression , expression )
    (29) matrix_function -> . matrix_function_name ( expression )
    (33) matrix -> . [ rows ]
    (75) num_expression -> . var
    (76) num_expression -> . number
    (30) matrix_function_name -> . ZEROS
    (31) matrix_function_name -> . ONES
    (32) matrix_function_name -> . EYE
    (47) var -> . ID
    (48) number -> . INTNUM
    (49) number -> . FLOATNUM
    (               shift and go to state 44
    -               shift and go to state 45
    ID              shift and go to state 18
    [               shift and go to state 47
    ZEROS           shift and go to state 51
    ONES            shift and go to state 52
    EYE             shift and go to state 53
    INTNUM          shift and go to state 54
    FLOATNUM        shift and go to state 55

    condition                      shift and go to state 64
    expression                     shift and go to state 63
    uminus                         shift and go to state 37
    vector_element                 shift and go to state 38
    matrix_element                 shift and go to state 39
    transposition                  shift and go to state 40
    matrix_function                shift and go to state 41
    matrix                         shift and go to state 42
    num_expression                 shift and go to state 43
    matrix_function_name           shift and go to state 48
    var                            shift and go to state 49
    number                         shift and go to state 50

state 30

    (10) instruction -> { instructions . }
    (5) instructions -> instructions . instruction
    (6) instruction -> . FOR var = range instruction
    (7) instruction -> . WHILE ( condition ) instruction
    (8) instruction -> . IF ( condition ) instruction ELSE instruction
    (9) instruction -> . IF ( condition ) instruction
    (10) instruction -> . { instructions }
    (11) instruction -> . statement ;
    (12) instruction -> . assignment ;
    (51) statement -> . PRINT print_vals
    (52) statement -> . RETURN expression
    (53) statement -> . BREAK
    (54) statement -> . CONTINUE
    (25) assignment -> . vector_element assignment_op expression
    (26) assignment -> . matrix_element assignment_op expression
    (27) assignment -> . var assignment_op expression
    (45) vector_element -> . ID [ expression ]
    (46) matrix_element -> . ID [ expression , expression ]
    (47) var -> . ID
    }               shift and go to state 65
    FOR             shift and go to state 5
    WHILE           shift and go to state 7
    IF              shift and go to state 8
    {               shift and go to state 9
    PRINT           shift and go to state 12
    RETURN          shift and go to state 13
    BREAK           shift and go to state 14
    CONTINUE        shift and go to state 15
    ID              shift and go to state 18

    instruction                    shift and go to state 19
    var                            shift and go to state 6
    statement                      shift and go to state 10
    assignment                     shift and go to state 11
    vector_element                 shift and go to state 16
    matrix_element                 shift and go to state 17

state 31

    (11) instruction -> statement ; .
    FOR             reduce using rule 11 (instruction -> statement ; .)
    WHILE           reduce using rule 11 (instruction -> statement ; .)
    IF              reduce using rule 11 (instruction -> statement ; .)
    {               reduce using rule 11 (instruction -> statement ; .)
    PRINT           reduce using rule 11 (instruction -> statement ; .)
    RETURN          reduce using rule 11 (instruction -> statement ; .)
    BREAK           reduce using rule 11 (instruction -> statement ; .)
    CONTINUE        reduce using rule 11 (instruction -> statement ; .)
    ID              reduce using rule 11 (instruction -> statement ; .)
    $end            reduce using rule 11 (instruction -> statement ; .)
    }               reduce using rule 11 (instruction -> statement ; .)
    ELSE            reduce using rule 11 (instruction -> statement ; .)


state 32

    (12) instruction -> assignment ; .
    FOR             reduce using rule 12 (instruction -> assignment ; .)
    WHILE           reduce using rule 12 (instruction -> assignment ; .)
    IF              reduce using rule 12 (instruction -> assignment ; .)
    {               reduce using rule 12 (instruction -> assignment ; .)
    PRINT           reduce using rule 12 (instruction -> assignment ; .)
    RETURN          reduce using rule 12 (instruction -> assignment ; .)
    BREAK           reduce using rule 12 (instruction -> assignment ; .)
    CONTINUE        reduce using rule 12 (instruction -> assignment ; .)
    ID              reduce using rule 12 (instruction -> assignment ; .)
    $end            reduce using rule 12 (instruction -> assignment ; .)
    }               reduce using rule 12 (instruction -> assignment ; .)
    ELSE            reduce using rule 12 (instruction -> assignment ; .)


state 33

    (51) statement -> PRINT print_vals .
    (56) print_vals -> print_vals . , print_val
    ;               reduce using rule 51 (statement -> PRINT print_vals .)
    ,               shift and go to state 66


state 34

    (55) print_vals -> print_val .
    ,               reduce using rule 55 (print_vals -> print_val .)
    ;               reduce using rule 55 (print_vals -> print_val .)


state 35
